# doctran

./: README.md  benchmark.ipynb  examples.ipynb  pyproject.toml
doctran/: __init__.py  doctran.py  models.py
doctran/transformers/: __init__.py  transformers.py
examples/: doctran_examples.ipynb  gmail.py  pdf.py  test.txt
examples/notebooks/: test.ipynb
prompts/: __init__.py  prompts.py
tests/: gmail.py
