[tool.poetry]
name = "doctran"
version = "0.0.2"
description = "Document transformation framework for vector based retrieval"
authors = ["Jason Fan <jason.wc.fan@gmail.com>", "Ayan Bandyopadhyay <ayanb9440@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
requests = "^2.31.0"
mailbox = "^0.4"
bs4 = "^0.0.1"
lxml = "^4.9.2"
openai = "^0.27.8"
jsonschema = "^4.17.3"
pdfplumber = "^0.9.0"
presidio-analyzer = "^2.2.33"
presidio-anonymizer = "^2.2.33"
spacy = "^3.5.4"
tiktoken = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
